--- a/Lecture_09/Spring-microservices/MyApplication2/src/main/resources/application.yaml
+++ b/Lecture_09/Spring-microservices/MyApplication2/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 server:
-  port: 8080
+  port: 8081
 spring:
   application:
-    name: PaymentService-01
+    name: OpenFighnService-01
 eureka:
   client:
     service-url:
