--- a/Lecture_09/Spring-microservices/MyApplication2/pom.xml
+++ b/Lecture_09/Spring-microservices/MyApplication2/pom.xml
@@ -9,7 +9,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>MyApplication</artifactId>
+    <artifactId>MyApplication2</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -24,7 +25,12 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
+
+
 
 </project>
