--- a/Lecture_09/Spring-microservices/pom.xml
+++ b/Lecture_09/Spring-microservices/pom.xml
@@ -21,12 +21,11 @@
         <module>MyZuul</module>
         <module>ConfigServer</module>
         <module>MyHystrix</module>
+        <module>MyApplication2</module>
+        <module>MyApiGateway</module>
     </modules>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
